# jupyter-jaeger

./: .gitignore  MANIFEST.in  Makefile  README.md  entrypoint.py  environment-release.yaml  environment.yaml  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  test.yaml
binder/: postBuild  requirements.txt
example/: README.md  Untitled.ipynb  package.json
example/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
example/src/: index.ts
example/src/.ipynb_checkpoints/: index-checkpoint.ts
jupyter-config/: jupyter_jaeger.json
jupyter_jaeger/: __init__.py  handlers.py
jupyter_jaeger/labextension/: package.json
jupyter_jaeger/labextension/static/: 177.b881cd1394001a0ed6ef.js  534.48309314f28a30fcd969.js  568.491239684cf844e3e9c7.js  remoteEntry.ec06e953f5a87ff8b79a.js  style.js
src/: handler.ts  index.ts
